# graphite

./: .gitattributes  .gitignore  .hgeol  .hgignore  CMakeLists.txt  CNAME  COPYING  ChangeLog  Graphite.cmake  LICENSE  Makefile.am  README.md  Todo.txt  buildtest.bat  configure.ac  graphite.pc.in  graphite2.pc.in  graphite2.py  meson.build  meson_options.txt  setup.py
common/: FileFont.cpp  FileFont.h
contrib/: android.README  envsetup.sh
debian-src/: build  changelog  control  copyright  libgraphite2-2.0.0-dbg.lintian-overrides  libgraphite2-2.0.0.lintian-overrides  libgraphite2-dev.dirs  libgraphite2-dev.install  rules
doc/: CMakeLists.txt  GTF.adoc  GTF.txt  OpCodes.adoc  OpCodes.txt  Segment JSON Schema.json  android.txt  building.adoc  building.txt  calling.adoc  calling.txt  features.adoc  features.txt  font.adoc  font.txt  full.cfg  full.cfg.in  graphite.css  hacking.adoc  hacking.txt  intro.adoc  intro.txt  manual.adoc  manual.txt  meson.build  public.cfg  public.cfg.in  release.adoc  release.txt  testing.adoc  testing.asc  testing.txt
gr2fonttest/: CMakeLists.txt  UtfCodec.cpp  UtfCodec.h  gr2FontTest.cpp  meson.build
grngfonttest/: CMakeLists.txt  Makefile.am  configure.ac  grngFontTest.cpp
include/: meson.build
perl/: MANIFEST  META.yml
python/: fuzzbidi.py  graphite2.py
site/: Gemfile  README.md  _config.yml  graide.md  graide_tutorial.md  graphite_about.md  graphite_aboutOT.md  graphite_aboutWhy.md  graphite_apps.md  graphite_appsParent.md  graphite_codeSnippets.md  graphite_contact.md  graphite_dev.md  graphite_devApp.md  graphite_devFont.md  graphite_download.md  graphite_firefox.md  graphite_fontdemo.md  graphite_fonts.md  graphite_news.md  graphite_otcompare.md  (+7 more)
src/: Bidi.cpp  CMakeLists.txt  CachedFace.cpp  CachedFace.h  CharInfo.cpp  CharInfo.h  CharInfoImp.h  CmapCache.cpp  CmapCache.h  Code.cpp  Code.h  Collider.cpp  Decompressor.cpp  Face.cpp  Face.h  FeatureMap.cpp  FeatureMap.h  FeatureRef.cpp  FeatureRefHandle.cpp  FeatureVal.h  Features.cpp  Features.h  FeaturesHandle.cpp  FeaturesImp.h  FileFace.cpp  Font.cpp  Font.h  FontFace.cpp  FontFace.h  FontImpl.cpp  FontImpl.h  GlyphCache.cpp  GlyphFace.cpp  GlyphFace.h  GlyphFaceCache.cpp  GlyphFaceCache.h  GrCachedFace.cpp  GrCachedFace.h  GrFace.cpp  GrFace.h  (+91 more)
src/inc/: Bidi.h  CachedFace.h  CharInfo.h  CmapCache.h  Code.h  Collider.h  Compression.h  Decompressor.h  Endian.h  Error.h  Face.h  FeatureMap.h  FeatureVal.h  FileFace.h  Font.h  GlyphCache.h  GlyphFace.h  GlyphFaceCache.h  Intervals.h  List.h  Machine.h  Main.h  NameTable.h  Pass.h  Position.h  Rule.h  SegCache.h  SegCacheEntry.h  SegCacheStore.h  Segment.h  ShapingContext.hpp  Shrinker.h  Silf.h  Slot.h  SlotBuffer.h  SlotMap.h  Sparse.h  TtfTypes.h  TtfUtil.h  UtfCodec.h  (+8 more)
tests/: CMakeLists.txt  biditest  corrupt.py  defuzz  fnttxtrender  full-fuzz-test.sh  fuzzbidi  fuzzcharis  fuzzcomparerender  fuzzpadauk  fuzztest  graphite.py  hbspeeds  hbtests.json  jsoncmp  libstdc++_usage  meson.build  nolibstdc++  run-fuzz-tests.sh  timings.sh  trace2svg
tests/bidi/: CMakeLists.txt  biditest  fuzzbidi  graphite.py
tests/bittwiddling/: CMakeLists.txt  bits.cpp  meson.build
tests/comparerenderer/: CMakeLists.txt  CompareRenderer.cpp  FeatureParser.h  Gr2Renderer.h  GrNgRenderer.h  GrRenderer.h  GrUtfTextSrc.cpp  GrUtfTextSrc.h  HbNgRenderer.h  HbRenderer.h  IcuRenderer.h  RenderedLine.h  Renderer.h  RendererOptions.h  UniscribeRenderer.h  meson.build
tests/comparerenderer/icule/: FontObject.cpp  FontObject.h  FontTableCache.cpp  FontTableCache.h  Makefile.am  PortableFontInstance.cpp  PortableFontInstance.h  cfonts.cpp  cfonts.h  letest.h  readme  sfnt.h
tests/endian/: CMakeLists.txt  endiantest.cpp  meson.build
tests/examples/: CMakeLists.txt  cluster.c  features.c  freetype.c  linebreak.c  meson.build  simple.c
tests/featuremap/: CMakeLists.txt  featuremaptest.cpp  meson.build
tests/fonts/Annapurnarc2/: annapurna.gdl  annapurna_features.gdh  annapurna_main.gdh  dbg_classes.txt  dbg_cmap.txt  dbg_enginecode.txt  dbg_fsm.txt  dbg_glyphattrs.txt  dbg_parsetree.txt  dbg_ruleprec.txt  stddef.gdh
tests/fonts/blowup/: blowup.gdl
tests/fonts/charis_r_gr/: charis_r_glyphs.gdl  dbg_classes.txt  dbg_cmap.txt  dbg_enginecode.txt  dbg_fsm.txt  dbg_glyphattrs.txt  dbg_parsetree.txt  dbg_ruleprec.txt  features.gdh  main.gdh  pitches.gdh  pua.gdh
tests/fonts/general/: general.gdl
tests/fuzz-tests/: CMakeLists.txt  dbg-main.cpp  gr-fuzzer-font.cpp  gr-fuzzer-segment.cpp  graphite-fuzzer-font-only.cpp  graphite-fuzzer.cpp  graphite-fuzzer.hpp  hairball.py
tests/fuzz-tests/Annapurnarc2/udhr-hin/: justification.fuzz  loading.fuzz
tests/fuzz-tests/libfuzz-corpus/: annapurnarc2-udhr_hin.fuzz  annapurnarc2-udhr_nep.fuzz  awami-awami_tests.fuzz  awami_compressed-awami_tests.fuzz  charis_r_gr-udhr_eng.fuzz  charis_r_gr-udhr_yor.fuzz  padauk-headwords.fuzz  scheherazadegr-udhr_arb.fuzz
tests/grcollections/: vectortest.cpp
tests/grlist/: CMakeLists.txt  grlisttest.cpp  intervalsettest.cpp  meson.build
tests/json/: CMakeLists.txt  jsontest  jsontest.cpp  meson.build
tests/nametabletest/: CMakeLists.txt  meson.build  nametabletest.cpp
tests/segcache/: CMakeLists.txt  meson.build  segcachetest.cpp
tests/sparsetest/: CMakeLists.txt  meson.build  sparsetest.cpp
tests/standards/: annacmp1.json  awamicmp1.json  awamicmp2.json  awamicmp3.json  charis1.json  charis2.json  charis3.json  charis4.json  charis5.json  charis6.json  charis7.json  charis8.json  chariscmp1.json  chariscmp2.json  general1.json  grtest1.json  magyar1.json  magyar2.json  magyar3.json  padauk1.json  padauk10.json  padauk11.json  padauk12.json  padauk2.json  padauk3.json  padauk4.json  padauk5.json  padauk6.json  padauk7.json  padauk8.json  padauk9.json  padaukcmp1.json  piglatin1.json  scher1.json  scher2.json  scher3.json  scher4.json  scher5.json  schercmp1.json  underflow.json
tests/texts/: awami_tests.txt  awami_tests.xml  udhr_hin.txt
tests/utftest/: CMakeLists.txt  meson.build  utftest.cpp
tests/vm/: CMakeLists.txt  basic_test.cpp  meson.build
(+148 files in other folders)
